--- a/flutter_dersleri/odev_6_lokma/pubspec.yaml
+++ b/flutter_dersleri/odev_6_lokma/pubspec.yaml
@@ -56,6 +56,12 @@ flutter:
     - family: SantElia
       fonts:
         - asset: assets/fonts/SantEliaScriptBoldDEMO.otf
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Montserrat-Regular.ttf
+          weight: 500
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
