--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ doc/api/
 *.js_
 *.js.deps
 *.js.map
+flutter_dersleri/kisiler_uygulamasi_bloc_pattern.zip
+flutter_dersleri/kisiler_uygulamasi_cubit_dio.zip
+flutter_dersleri/kisiler_uygulamasi_cubit_http.zip
+flutter_dersleri/kisiler_uygulamasi_sql.zip
+flutter_dersleri/kisiler_uygulamasi_temel_tasarım.zip
