--- a/flutter_dersleri/yemek_siparis_uygulamasi/pubspec.yaml
+++ b/flutter_dersleri/yemek_siparis_uygulamasi/pubspec.yaml
@@ -33,9 +33,11 @@ dependencies:
   http: ^0.13.4
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  animated_button: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +62,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+  fonts:
+    - family: PatrickHand
+      fonts:
+        - asset: assets/fonts/PatrickHand-Regular.ttf
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
