--- a/flutter_dersleri/yemek_siparis_uygulamasi/pubspec.yaml
+++ b/flutter_dersleri/yemek_siparis_uygulamasi/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.3.3
   http: ^0.13.4
+  firebase_auth: ^3.3.17
+  equatable: ^2.0.3
+
 
 
 
@@ -38,6 +41,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animated_button: ^0.2.0
+  cloud_firestore: ^3.2.1
 
 dev_dependencies:
   flutter_test:
